--- a/src/components/cart-dropdown/cart-dropdown.styles.scss
+++ b/src/components/cart-dropdown/cart-dropdown.styles.scss
@@ -11,7 +11,10 @@
   right: 40px;
   z-index: 5;
   
-  
+  .empty-message{
+    font-size: 18px;
+    margin: 50px auto;
+  }
 
   .cart-items {
     max-height: 240px;
