--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -28,7 +28,7 @@
     margin-left: auto;
     font-size: 36px;
   }
-  .test-waring{
+  .test-warning{
     text-align: center;
     margin-top: 40px;
     font-size: 24px;
